# lamin-usecases

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  lamin-project.yaml  mcfarland_2020_preparation.ipynb  noxfile.py  pyproject.toml
.github/workflows/: build.yml  doc-changes.yml
docs/: Schema_001.ipynb  Schema_001_V4.ipynb  Schema_002.ipynb  Schema_002_V3.ipynb  Schema_003.ipynb  Xu_1.ipynb  Xu_2.ipynb  Xu_3.ipynb  Xu_4.ipynb  analysis-flow.ipynb  analysis-registries.ipynb  analysis-registries.md  annotate.ipynb  arc-virtual-cell-atlas.ipynb  arc-virtual-cell-atlas.md  atlases.md  bioregistry.md  birds-eye.ipynb  bulkrna.ipynb  bulkrna.md  by-datatype.md  by-ontology.md  by-registry.md  cell_line.ipynb  cell_marker.ipynb  cell_marker.md  cell_type.ipynb  celltypist.ipynb  celltypist.md  changelog.md  data-flow.md  data-lineage.md  datatype.md  developmental_stage.ipynb  disease.ipynb  dna-methylation.md  ehr.ipynb  ehr.md  enrichr.ipynb  enrichr.md  (+81 more)
docs/CellFeaturizer_5l5zhvnv/: temp_mmap_523976661208316702.hdf  temp_mmap_8641142899083921761.hdf  temp_mmap_8995216089047333046.hdf
docs/analysis-flow-scripts/: register_example_file.py
docs/biology/: celltypist.ipynb  enrichr.ipynb  index.md  lineage-checkpoint.ipynb  lineage.ipynb
docs/bioregistry/: celltypist.ipynb  enrichr.ipynb  registries.md
docs/by-datatype/: 20-scrna-1.ipynb  40-multimodal.ipynb
docs/by-registry/: enrichr.ipynb  test_notebooks.py
docs/datatype/: 10-scrna.ipynb  20-scrna-1.ipynb  30-flow.ipynb  40-multimodal.ipynb  60-bulkrna.ipynb
docs/faq/: index.md
docs/guide/: index.md  quickstart.ipynb
docs/ontology/: cell_marker.ipynb  developmental_stage.ipynb  disease.ipynb  experimental_factor.ipynb  gene.ipynb  protein.ipynb  tissue.ipynb
docs/project-flow-scripts/: cellranger.py  chromium_10x_upload.py  hit-identification.ipynb  integrated-analysis.ipynb  postprocess_cellranger.py
docs/usecases/: analyses.ipynb  celltypist.ipynb  enrichr.ipynb  index.md  lineage.ipynb
entity_generation/: cookiecutter.json  generate.py
lamin_examples/: __init__.py  _datasets.py
lamin_usecases/: __init__.py  _datasets.py
tests/: test_base.py  test_notebooks.py
variants_db_lamindb_usecase/: .gitignore  README.md  pyproject.toml  test_import.py
variants_db_lamindb_usecase/mutation_db/: run_mut.py
variants_db_lamindb_usecase/mutation_db/annotations/: kegg.py  ontology.py  rna_editing.py
variants_db_lamindb_usecase/mutation_db/core/: vcf_parser.py
variants_db_lamindb_usecase/mutation_db/filters/: mutation_types.py
variants_db_lamindb_usecase/tests/: conftest.py
variants_db_lamindb_usecase/tests/test_annotations/: test_kegg.py  test_pathways.py  test_rna_editing.py
variants_db_lamindb_usecase/tests/test_core/: test_vcf_parser.py
variants_db_lamindb_usecase/tests/test_filters/: test_mutation_types.py
(+61 files in other folders)
