[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamin_examples"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "celltypist",
    "gseapy",
    "scanpy",
    "scikit-learn<1.3.0", # for celltypist
]

[project.urls]
Home = "https://github.com/laminlabs/lamin-examples"

[project.optional-dependencies]
dev = [
    "laminci",
    "pre-commit",
    "pytest>=6.0",
    "pytest-cov",
    "nbproject_test",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "lamin_examples/*",
]
