[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamin_usecases"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = []

[project.urls]
Home = "https://github.com/laminlabs/lamin-usecases"

[project.optional-dependencies]
dev = [
    "laminci",
    "pre-commit",
    "pytest>=6.0",
    "pytest-cov",
    "nbproject_test",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "lamin_usecases/*",
]
